# lazgi

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: workflow.yaml
lazgi/: __init__.py  _types.py
tests/: test_wrapper.py
