[project]
name = "lazgi"
version = "0.1.0"
description = "Lazily created ASGI apps"
authors = [{ name = "Adrian Garcia Badaracco", email = "adrian@adriangb.com" }]
requires-python = ">=3.7,<4"
readme = "README.md"
license = "MIT"
keywords = [
    "web-framework",
    "http",
    "asgi",
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = ["asgi-lifespan-middleware>=0.1.3"]

[project.urls]
Repository = "https://github.com/adriangb/lazgi"
Documentation = "https://github.com/adriangb/lazgi"

[dependency-groups]
dev = [
    "black>=22",
    "flake8>=3",
    "isort>=5",
    "pre-commit>=2",
    "pytest>=6",
    "pytest-cov>=3",
    "pytest-sugar>=0",
    "trio>=0.19.0",
    "starlette>=0.20.4",
    "requests>=2.28.1",
    "mypy>=0.982",
    "starlette",
    "black",
    "flake8",
    "isort",
    "pre-commit",
    "httpx",
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "anyio>=3.6.2",
]

[tool.isort]
profile = "black"

[tool.coverage.run]
branch = true
source = ["lazgi", "tests"]
dynamic_context = "test_function"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    '\.\.\.',
    "raise NotImplementedError",
    "TYPE_CHECKING",
    "__repr__",
    "import",
]
fail_under = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
files = "lazgi/**/*.py,tests/**/*.py"
no_implicit_optional = true
allow_redefinition = false
implicit_reexport = false
warn_unreachable = true
show_error_codes = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
